tests/miniJava/neg/006796_mutation.MiniJava
class java while { public static void Main ( String [ ] java ) { { } } }
